[project]
name = "dagster-portfolio-sample"
version = "0.1.0"
description = "Sample Dagster and vBase pipeline for a simple portfoio"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ValidityBase", email = "info@validitybase.com" }
]

[tool.dagster]
module_name = "dagster_pipelines.definitions"
