[project]
name = "dagster-portfolio-sample"
version = "0.1.0"
description = "Sample Dagster and vBase pipeline for a simple portfoio"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "ValidityBase", email = "info@validitybase.com" }
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dagster_pipelines*"]

[tool.isort]
# Avoid conflicts with black formatter.
profile = "black"

[tool.dagster]
module_name = "dagster_pipelines.definitions"
